# SciML

./: pyproject.toml
Exercises/: ex-X-01-1.ipynb
notebooks/: exercise-1-7.ipynb
src/sciml/: __init__.py  data.py
