[project]
name = "sciml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ClaraHol", email = "s214722@dtu.dk" }
]
requires-python = ">=3.14"
dependencies = [
    "dataclasses>=0.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "torch>=2.10.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"


